KFSMI-4650 suppress sales tax info when not enabled.

--- a/work/src/org/kuali/kfs/module/ar/report/CreditMemoNoTax.jrxml
+++ b/work/src/org/kuali/kfs/module/ar/report/CreditMemoNoTax.jrxml
@@ -2,7 +2,7 @@
 <!-- Created with iReport - A designer for JasperReports -->
 <!DOCTYPE jasperReport PUBLIC "//JasperReports//DTD Report Design//EN" "http://jasperreports.sourceforge.net/dtds/jasperreport.dtd">
 <jasperReport
-		 name="CreditMemo"
+		 name="CreditMemoNoTax"
 		 columnCount="1"
 		 printOrder="Vertical"
 		 orientation="Portrait"
@@ -624,7 +624,7 @@
 						<subreportParameterExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}]]></subreportParameterExpression>
 					</subreportParameter>
 					<dataSourceExpression><![CDATA[new JRBeanCollectionDataSource($P{details})]]></dataSourceExpression>
-					<subreportExpression  class="java.lang.String"><![CDATA[$P{SUBREPORT_DIR} + "CreditMemoDetails.jasper"]]></subreportExpression>
+					<subreportExpression  class="java.lang.String"><![CDATA[$P{SUBREPORT_DIR} + "CreditMemoDetailsNoTax.jasper"]]></subreportExpression>
 				</subreport>
 			</band>
 		</detail>
